--- a/YPVS.ioc
+++ b/YPVS.ioc
@@ -1,6 +1,5 @@
 #MicroXplorer Configuration settings - do not modify
 Mcu.Family=STM32F1
-PA6.GPIOParameters=GPIO_Speed,GPIO_Label
 RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
 ProjectManager.MainLocation=Src
 RCC.MCOFreq_Value=72000000
@@ -10,25 +9,28 @@ TIM2.CounterMode=TIM_COUNTERMODE_UP
 ProjectManager.KeepUserCode=true
 PA10.Mode=Asynchronous
 Mcu.UserName=STM32F103C8Tx
-Mcu.PinsNb=12
+Mcu.PinsNb=13
 ProjectManager.NoMain=false
 RCC.PLLCLKFreq_Value=72000000
 PC13-TAMPER-RTC.GPIOParameters=GPIO_Label
 ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_TIM2_Init-TIM2-false-HAL-true,4-MX_TIM3_Init-TIM3-false-HAL-true,5-MX_USART1_UART_Init-USART1-false-HAL-true
+PA2.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
 PC13-TAMPER-RTC.Signal=GPIO_Output
 RCC.ADCFreqValue=36000000
 ProjectManager.DefaultFWLocation=true
-PA6.GPIO_Label=SERVO_PWM
 PD0-OSC_IN.Signal=RCC_OSC_IN
 TIM2.ICFilter_2=4
 ProjectManager.DeletePrevious=true
 USART1.IPParameters=VirtualMode
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
+PA2.GPIOParameters=GPIO_Speed,GPIO_Label
 SH.S_TIM2_CH1_ETR.ConfNb=1
 PinOutPanel.RotationAngle=0
 RCC.FamilyName=M
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 ProjectManager.StackSize=0x400
+PA0-WKUP.GPIO_Label=RPM_INPUT
+PB5.GPIOParameters=GPIO_Label
 PA0-WKUP.Signal=S_TIM2_CH1_ETR
 PD1-OSC_OUT.Signal=RCC_OSC_OUT
 PA13.Signal=SYS_JTMS-SWDIO
@@ -42,6 +44,7 @@ Mcu.IP0=NVIC
 PA9.Mode=Asynchronous
 Mcu.IP1=RCC
 Mcu.UserConstants=
+SH.S_TIM3_CH2.ConfNb=1
 ProjectManager.TargetToolchain=Other Toolchains (GPDSC)
 Mcu.ThirdPartyNb=0
 RCC.HCLKFreq_Value=72000000
@@ -51,6 +54,7 @@ ProjectManager.PreviousToolchain=
 RCC.APB2TimFreq_Value=72000000
 TIM3.Period=19999
 PA9.Signal=USART1_TX
+PB5.Locked=true
 Mcu.Pin6=PA10
 Mcu.Pin7=PA13
 VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
@@ -58,19 +62,20 @@ ProjectManager.RegisterCallBack=
 PC13-TAMPER-RTC.Locked=true
 Mcu.Pin8=PA14
 RCC.USBFreq_Value=72000000
-Mcu.Pin9=VP_SYS_VS_Systick
+Mcu.Pin9=PB5
 VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
 RCC.AHBFreq_Value=72000000
 Mcu.Pin0=PC13-TAMPER-RTC
 Mcu.Pin1=PD0-OSC_IN
-TIM3.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 GPIO.groupedBy=Group By Peripherals
 PD0-OSC_IN.Mode=HSE-External-Oscillator
 Mcu.Pin2=PD1-OSC_OUT
 Mcu.Pin3=PA0-WKUP
-Mcu.Pin4=PA6
+PA0-WKUP.GPIOParameters=GPIO_Label
+Mcu.Pin4=PA2
 Mcu.Pin5=PA9
 ProjectManager.ProjectBuild=false
+SH.S_TIM3_CH2.0=TIM3_CH2,PWM Generation2 CH2
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 board=custom
@@ -80,20 +85,19 @@ PC13-TAMPER-RTC.GPIO_Label=LED_BUILTIN
 RCC.PLLMUL=RCC_PLL_MUL9
 RCC.VCOOutput2Freq_Value=8000000
 ProjectManager.FirmwarePackage=STM32Cube FW_F1 V1.8.0
-MxDb.Version=DB.5.0.50
+MxDb.Version=DB.6.0.0
 RCC.APB2Freq_Value=72000000
 ProjectManager.BackupPrevious=false
-MxCube.Version=5.5.0
+MxCube.Version=6.0.1
 VP_TIM2_VS_ClockSourceINT.Mode=Internal
 PA14.Mode=Serial_Wire
 TIM3.Prescaler=71
 NVIC.TIM2_IRQn=true\:1\:0\:true\:true\:true\:1\:true\:true
 File.Version=6
 VP_SYS_VS_Systick.Mode=SysTick
-TIM3.IPParameters=Prescaler,Period,Channel-PWM Generation1 CH1
+TIM3.IPParameters=Prescaler,Period,Channel-PWM Generation2 CH2
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-SH.S_TIM3_CH1.0=TIM3_CH1,PWM Generation1 CH1
 TIM2.Period=9999
 PA13.Mode=Serial_Wire
 ProjectManager.FreePins=false
@@ -101,14 +105,15 @@ RCC.IPParameters=ADCFreqValue,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1Ti
 ProjectManager.AskForMigrate=true
 Mcu.Name=STM32F103C(8-B)Tx
 ProjectManager.HalAssertFull=false
+PA2.Signal=GPIO_Output
 ProjectManager.ProjectName=YPVS
 ProjectManager.UnderRoot=false
 RCC.PLLMCOFreq_Value=36000000
 ProjectManager.CoupleFile=true
 RCC.SYSCLKFreq_VALUE=72000000
 Mcu.Package=LQFP48
+PB5.Signal=S_TIM3_CH2
 TIM2.Prescaler=719
-PA6.Signal=S_TIM3_CH1
 RCC.TimSysFreq_Value=72000000
 NVIC.ForceEnableDMAVector=true
 KeepUserPlacement=false
@@ -116,22 +121,25 @@ NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 USART1.VirtualMode=VM_ASYNC
 ProjectManager.CompilerOptimize=6
 ProjectManager.ToolChainLocation=
+PA2.GPIO_Label=SIM_RPM
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 SH.S_TIM2_CH1_ETR.0=TIM2_CH1,PWM_Input_1
 PA10.Signal=USART1_RX
 PA14.Signal=SYS_JTCK-SWCLK
 ProjectManager.HeapSize=0x200
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-SH.S_TIM3_CH1.ConfNb=1
 ProjectManager.ComputerToolchain=false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
-Mcu.Pin11=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin10=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin11=VP_TIM2_VS_ClockSourceINT
+TIM3.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
+Mcu.Pin12=VP_TIM3_VS_ClockSourceINT
+PB5.GPIO_Label=SERVO_PWM
+Mcu.Pin10=VP_SYS_VS_Systick
 RCC.APB1TimFreq_Value=72000000
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-PA6.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
 RCC.APB1Freq_Value=36000000
 ProjectManager.CustomerFirmwarePackage=
 VP_TIM3_VS_ClockSourceINT.Mode=Internal
 ProjectManager.DeviceId=STM32F103C8Tx
 ProjectManager.LibraryCopy=0
+PA2.Locked=true
