--- a/YPVS.ioc
+++ b/YPVS.ioc
@@ -10,21 +10,22 @@ ProjectManager.KeepUserCode=true
 PA10.Mode=Asynchronous
 Mcu.UserName=STM32F103C8Tx
 Mcu.PinsNb=15
-PB10.Mode=I2C
 ProjectManager.NoMain=false
+TIM1.IPParameters=Channel-Output Compare1 No Output,Prescaler,Period
 RCC.PLLCLKFreq_Value=72000000
 PC13-TAMPER-RTC.GPIOParameters=GPIO_Label
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_TIM2_Init-TIM2-false-HAL-true,4-MX_TIM3_Init-TIM3-false-HAL-true,5-MX_USART1_UART_Init-USART1-false-HAL-true,6-MX_I2C2_Init-I2C2-false-HAL-true
+TIM1.Channel-Output\ Compare1\ No\ Output=TIM_CHANNEL_1
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_TIM2_Init-TIM2-false-HAL-true,4-MX_TIM3_Init-TIM3-false-HAL-true,5-MX_USART1_UART_Init-USART1-false-HAL-true
 PA2.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
 PC13-TAMPER-RTC.Signal=GPIO_Output
 RCC.ADCFreqValue=36000000
 ProjectManager.DefaultFWLocation=true
+NVIC.TIM1_UP_IRQn=true\:1\:1\:true\:false\:true\:true\:true
 PD0-OSC_IN.Signal=RCC_OSC_IN
 TIM2.ICFilter_2=4
 ProjectManager.DeletePrevious=true
 USART1.IPParameters=VirtualMode
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
-PB11.Signal=I2C2_SDA
 PA2.GPIOParameters=GPIO_Speed,GPIO_Label
 SH.S_TIM2_CH1_ETR.ConfNb=1
 PinOutPanel.RotationAngle=0
@@ -34,19 +35,20 @@ ProjectManager.StackSize=0x400
 PA0-WKUP.GPIO_Label=RPM_INPUT
 PB5.GPIOParameters=GPIO_Label
 PA0-WKUP.Signal=S_TIM2_CH1_ETR
+VP_TIM1_VS_no_output1.Mode=Output Compare1 No Output
 PD1-OSC_OUT.Signal=RCC_OSC_OUT
 PA13.Signal=SYS_JTMS-SWDIO
 Mcu.IP4=TIM2
 RCC.FCLKCortexFreq_Value=72000000
 Mcu.IP5=TIM3
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-Mcu.IP2=RCC
-Mcu.IP3=SYS
-Mcu.IP0=I2C2
+Mcu.IP2=SYS
+Mcu.IP3=TIM1
+Mcu.IP0=NVIC
 PA9.Mode=Asynchronous
-Mcu.IP1=NVIC
+Mcu.IP1=RCC
+TIM1.Prescaler=71
 Mcu.UserConstants=
-PB11.Mode=I2C
 SH.S_TIM3_CH2.ConfNb=1
 ProjectManager.TargetToolchain=Other Toolchains (GPDSC)
 Mcu.ThirdPartyNb=0
@@ -57,15 +59,16 @@ ProjectManager.PreviousToolchain=
 RCC.APB2TimFreq_Value=72000000
 TIM3.Period=19999
 PA9.Signal=USART1_TX
+VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
 PB5.Locked=true
-Mcu.Pin6=PB11
-Mcu.Pin7=PA9
+Mcu.Pin6=PA10
+Mcu.Pin7=PA13
 VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
 ProjectManager.RegisterCallBack=
-Mcu.Pin8=PA10
 PC13-TAMPER-RTC.Locked=true
+Mcu.Pin8=PA14
 RCC.USBFreq_Value=72000000
-Mcu.Pin9=PA13
+Mcu.Pin9=PB5
 VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
 RCC.AHBFreq_Value=72000000
 Mcu.Pin0=PC13-TAMPER-RTC
@@ -73,11 +76,10 @@ Mcu.Pin1=PD0-OSC_IN
 GPIO.groupedBy=Group By Peripherals
 PD0-OSC_IN.Mode=HSE-External-Oscillator
 Mcu.Pin2=PD1-OSC_OUT
-PB10.Signal=I2C2_SCL
 Mcu.Pin3=PA0-WKUP
-Mcu.Pin4=PA2
 PA0-WKUP.GPIOParameters=GPIO_PuPd,GPIO_Label
-Mcu.Pin5=PB10
+Mcu.Pin4=PA2
+Mcu.Pin5=PA9
 ProjectManager.ProjectBuild=false
 SH.S_TIM3_CH2.0=TIM3_CH2,PWM Generation2 CH2
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
@@ -92,6 +94,7 @@ ProjectManager.FirmwarePackage=STM32Cube FW_F1 V1.8.0
 MxDb.Version=DB.6.0.0
 RCC.APB2Freq_Value=72000000
 ProjectManager.BackupPrevious=false
+VP_TIM1_VS_no_output1.Signal=TIM1_VS_no_output1
 MxCube.Version=6.0.1
 VP_TIM2_VS_ClockSourceINT.Mode=Internal
 PA14.Mode=Serial_Wire
@@ -109,6 +112,7 @@ RCC.IPParameters=ADCFreqValue,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1Ti
 ProjectManager.AskForMigrate=true
 Mcu.Name=STM32F103C(8-B)Tx
 ProjectManager.HalAssertFull=false
+VP_TIM1_VS_ClockSourceINT.Mode=Internal
 PA2.Signal=GPIO_Output
 ProjectManager.ProjectName=YPVS
 ProjectManager.UnderRoot=false
@@ -136,15 +140,16 @@ NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 Mcu.Pin13=VP_TIM2_VS_ClockSourceINT
 Mcu.Pin14=VP_TIM3_VS_ClockSourceINT
 ProjectManager.ComputerToolchain=false
-NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
-Mcu.Pin11=PB5
+NVIC.PriorityGroup=NVIC_PRIORITYGROUP_3
+Mcu.Pin11=VP_TIM1_VS_ClockSourceINT
 TIM3.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
-Mcu.Pin12=VP_SYS_VS_Systick
+Mcu.Pin12=VP_TIM1_VS_no_output1
 PB5.GPIO_Label=SERVO_PWM
-Mcu.Pin10=PA14
+Mcu.Pin10=VP_SYS_VS_Systick
 RCC.APB1TimFreq_Value=72000000
 PA0-WKUP.GPIO_PuPd=GPIO_PULLUP
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+TIM1.Period=4999
 RCC.APB1Freq_Value=36000000
 ProjectManager.CustomerFirmwarePackage=
 VP_TIM3_VS_ClockSourceINT.Mode=Internal
