--- a/YPVS.ioc
+++ b/YPVS.ioc
@@ -6,23 +6,25 @@ RCC.MCOFreq_Value=72000000
 ProjectManager.ProjectFileName=YPVS.ioc
 PD1-OSC_OUT.Mode=HSE-External-Oscillator
 TIM2.CounterMode=TIM_COUNTERMODE_UP
+ADC1.Channel-4\#ChannelRegularConversion=ADC_CHANNEL_4
 ProjectManager.KeepUserCode=true
 PA10.Mode=Asynchronous
 Mcu.UserName=STM32F103C8Tx
-Mcu.PinsNb=15
+Mcu.PinsNb=16
 ProjectManager.NoMain=false
 TIM1.IPParameters=Channel-Output Compare1 No Output,Prescaler,Period
+ADC1.IPParameters=Rank-4\#ChannelRegularConversion,master,Channel-4\#ChannelRegularConversion,SamplingTime-4\#ChannelRegularConversion,NbrOfConversionFlag
 RCC.PLLCLKFreq_Value=72000000
 PC13-TAMPER-RTC.GPIOParameters=GPIO_Label
 TIM1.Channel-Output\ Compare1\ No\ Output=TIM_CHANNEL_1
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_TIM2_Init-TIM2-false-HAL-true,4-MX_TIM3_Init-TIM3-false-HAL-true,5-MX_USART1_UART_Init-USART1-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_TIM2_Init-TIM2-false-HAL-true,4-MX_TIM3_Init-TIM3-false-HAL-true,5-MX_USART1_UART_Init-USART1-false-HAL-true,6-MX_TIM1_Init-TIM1-false-HAL-true,7-MX_ADC1_Init-ADC1-false-HAL-true
 PA2.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
 PC13-TAMPER-RTC.Signal=GPIO_Output
 RCC.ADCFreqValue=36000000
 ProjectManager.DefaultFWLocation=true
 NVIC.TIM1_UP_IRQn=true\:1\:1\:true\:false\:true\:true\:true
 PD0-OSC_IN.Signal=RCC_OSC_IN
-TIM2.ICFilter_2=4
+TIM2.ICFilter_2=15
 ProjectManager.DeletePrevious=true
 USART1.IPParameters=VirtualMode
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
@@ -35,25 +37,26 @@ ProjectManager.StackSize=0x400
 PA0-WKUP.GPIO_Label=RPM_INPUT
 PB5.GPIOParameters=GPIO_Label
 PA0-WKUP.Signal=S_TIM2_CH1_ETR
+PA0-WKUP.Locked=true
 VP_TIM1_VS_no_output1.Mode=Output Compare1 No Output
 PD1-OSC_OUT.Signal=RCC_OSC_OUT
 PA13.Signal=SYS_JTMS-SWDIO
-Mcu.IP4=TIM2
+Mcu.IP4=TIM1
 RCC.FCLKCortexFreq_Value=72000000
-Mcu.IP5=TIM3
+Mcu.IP5=TIM2
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-Mcu.IP2=SYS
-Mcu.IP3=TIM1
-Mcu.IP0=NVIC
+Mcu.IP2=RCC
+Mcu.IP3=SYS
+Mcu.IP0=ADC1
 PA9.Mode=Asynchronous
-Mcu.IP1=RCC
+Mcu.IP1=NVIC
 TIM1.Prescaler=71
 Mcu.UserConstants=
 SH.S_TIM3_CH2.ConfNb=1
 ProjectManager.TargetToolchain=Other Toolchains (GPDSC)
 Mcu.ThirdPartyNb=0
 RCC.HCLKFreq_Value=72000000
-Mcu.IPNb=7
+Mcu.IPNb=8
 TIM2.IPParameters=ICFilter_2,CounterMode,Prescaler,Period
 ProjectManager.PreviousToolchain=
 RCC.APB2TimFreq_Value=72000000
@@ -61,14 +64,14 @@ TIM3.Period=19999
 PA9.Signal=USART1_TX
 VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
 PB5.Locked=true
-Mcu.Pin6=PA10
-Mcu.Pin7=PA13
+Mcu.Pin6=PA9
+Mcu.Pin7=PA10
 VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
 ProjectManager.RegisterCallBack=
 PC13-TAMPER-RTC.Locked=true
-Mcu.Pin8=PA14
+Mcu.Pin8=PA13
 RCC.USBFreq_Value=72000000
-Mcu.Pin9=PB5
+Mcu.Pin9=PA14
 VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
 RCC.AHBFreq_Value=72000000
 Mcu.Pin0=PC13-TAMPER-RTC
@@ -77,9 +80,9 @@ GPIO.groupedBy=Group By Peripherals
 PD0-OSC_IN.Mode=HSE-External-Oscillator
 Mcu.Pin2=PD1-OSC_OUT
 Mcu.Pin3=PA0-WKUP
-PA0-WKUP.GPIOParameters=GPIO_PuPd,GPIO_Label
+PA0-WKUP.GPIOParameters=GPIO_Label
 Mcu.Pin4=PA2
-Mcu.Pin5=PA9
+Mcu.Pin5=PA4
 ProjectManager.ProjectBuild=false
 SH.S_TIM3_CH2.0=TIM3_CH2,PWM Generation2 CH2
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
@@ -91,6 +94,7 @@ PC13-TAMPER-RTC.GPIO_Label=LED_BUILTIN
 RCC.PLLMUL=RCC_PLL_MUL9
 RCC.VCOOutput2Freq_Value=8000000
 ProjectManager.FirmwarePackage=STM32Cube FW_F1 V1.8.0
+ADC1.SamplingTime-4\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
 MxDb.Version=DB.6.0.0
 RCC.APB2Freq_Value=72000000
 ProjectManager.BackupPrevious=false
@@ -103,7 +107,9 @@ NVIC.TIM2_IRQn=true\:1\:0\:true\:true\:true\:1\:true\:true
 File.Version=6
 VP_SYS_VS_Systick.Mode=SysTick
 TIM3.IPParameters=Prescaler,Period,Channel-PWM Generation2 CH2
+SH.ADCx_IN4.0=ADC1_IN4,IN4
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+SH.ADCx_IN4.ConfNb=1
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 TIM2.Period=9999
 PA13.Mode=Serial_Wire
@@ -116,14 +122,17 @@ VP_TIM1_VS_ClockSourceINT.Mode=Internal
 PA2.Signal=GPIO_Output
 ProjectManager.ProjectName=YPVS
 ProjectManager.UnderRoot=false
-Mcu.IP6=USART1
+Mcu.IP6=TIM3
 RCC.PLLMCOFreq_Value=36000000
+Mcu.IP7=USART1
 ProjectManager.CoupleFile=true
+PA4.Signal=ADCx_IN4
 RCC.SYSCLKFreq_VALUE=72000000
 Mcu.Package=LQFP48
 PB5.Signal=S_TIM3_CH2
 TIM2.Prescaler=719
 RCC.TimSysFreq_Value=72000000
+ADC1.master=1
 NVIC.ForceEnableDMAVector=true
 KeepUserPlacement=false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false
@@ -136,18 +145,19 @@ SH.S_TIM2_CH1_ETR.0=TIM2_CH1,PWM_Input_1
 PA10.Signal=USART1_RX
 PA14.Signal=SYS_JTCK-SWCLK
 ProjectManager.HeapSize=0x200
+Mcu.Pin15=VP_TIM3_VS_ClockSourceINT
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-Mcu.Pin13=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin14=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin13=VP_TIM1_VS_no_output1
+Mcu.Pin14=VP_TIM2_VS_ClockSourceINT
 ProjectManager.ComputerToolchain=false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_3
-Mcu.Pin11=VP_TIM1_VS_ClockSourceINT
+ADC1.NbrOfConversionFlag=1
+Mcu.Pin11=VP_SYS_VS_Systick
 TIM3.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
-Mcu.Pin12=VP_TIM1_VS_no_output1
 PB5.GPIO_Label=SERVO_PWM
-Mcu.Pin10=VP_SYS_VS_Systick
+Mcu.Pin12=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin10=PB5
 RCC.APB1TimFreq_Value=72000000
-PA0-WKUP.GPIO_PuPd=GPIO_PULLUP
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 TIM1.Period=4999
 RCC.APB1Freq_Value=36000000
@@ -155,4 +165,5 @@ ProjectManager.CustomerFirmwarePackage=
 VP_TIM3_VS_ClockSourceINT.Mode=Internal
 ProjectManager.DeviceId=STM32F103C8Tx
 ProjectManager.LibraryCopy=0
+ADC1.Rank-4\#ChannelRegularConversion=1
 PA2.Locked=true
