--- a/YPVS.ioc
+++ b/YPVS.ioc
@@ -20,7 +20,7 @@ TIM1.Channel-Output\ Compare1\ No\ Output=TIM_CHANNEL_1
 ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_TIM2_Init-TIM2-false-HAL-true,4-MX_TIM3_Init-TIM3-false-HAL-true,5-MX_USART1_UART_Init-USART1-false-HAL-true,6-MX_TIM1_Init-TIM1-false-HAL-true,7-MX_ADC1_Init-ADC1-false-HAL-true
 PA2.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
 PC13-TAMPER-RTC.Signal=GPIO_Output
-RCC.ADCFreqValue=36000000
+RCC.ADCFreqValue=12000000
 ProjectManager.DefaultFWLocation=true
 NVIC.TIM1_UP_IRQn=true\:1\:1\:true\:false\:true\:true\:true
 PD0-OSC_IN.Signal=RCC_OSC_IN
@@ -40,6 +40,7 @@ PA0-WKUP.Signal=S_TIM2_CH1_ETR
 PA0-WKUP.Locked=true
 VP_TIM1_VS_no_output1.Mode=Output Compare1 No Output
 PD1-OSC_OUT.Signal=RCC_OSC_OUT
+RCC.ADCPresc=RCC_ADCPCLK2_DIV6
 PA13.Signal=SYS_JTMS-SWDIO
 Mcu.IP4=TIM1
 RCC.FCLKCortexFreq_Value=72000000
@@ -80,7 +81,7 @@ GPIO.groupedBy=Group By Peripherals
 PD0-OSC_IN.Mode=HSE-External-Oscillator
 Mcu.Pin2=PD1-OSC_OUT
 Mcu.Pin3=PA0-WKUP
-PA0-WKUP.GPIOParameters=GPIO_Label
+PA0-WKUP.GPIOParameters=GPIO_PuPd,GPIO_Label
 Mcu.Pin4=PA2
 Mcu.Pin5=PA4
 ProjectManager.ProjectBuild=false
@@ -89,7 +90,7 @@ NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 board=custom
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
-ProjectManager.LastFirmware=true
+ProjectManager.LastFirmware=false
 PC13-TAMPER-RTC.GPIO_Label=LED_BUILTIN
 RCC.PLLMUL=RCC_PLL_MUL9
 RCC.VCOOutput2Freq_Value=8000000
@@ -114,7 +115,7 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 TIM2.Period=9999
 PA13.Mode=Serial_Wire
 ProjectManager.FreePins=false
-RCC.IPParameters=ADCFreqValue,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,MCOFreq_Value,PLLCLKFreq_Value,PLLMCOFreq_Value,PLLMUL,PLLSourceVirtual,SYSCLKFreq_VALUE,SYSCLKSource,TimSysFreq_Value,USBFreq_Value,VCOOutput2Freq_Value
+RCC.IPParameters=ADCFreqValue,ADCPresc,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,MCOFreq_Value,PLLCLKFreq_Value,PLLMCOFreq_Value,PLLMUL,PLLSourceVirtual,SYSCLKFreq_VALUE,SYSCLKSource,TimSysFreq_Value,USBFreq_Value,VCOOutput2Freq_Value
 ProjectManager.AskForMigrate=true
 Mcu.Name=STM32F103C(8-B)Tx
 ProjectManager.HalAssertFull=false
@@ -158,6 +159,7 @@ PB5.GPIO_Label=SERVO_PWM
 Mcu.Pin12=VP_TIM1_VS_ClockSourceINT
 Mcu.Pin10=PB5
 RCC.APB1TimFreq_Value=72000000
+PA0-WKUP.GPIO_PuPd=GPIO_PULLUP
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 TIM1.Period=4999
 RCC.APB1Freq_Value=36000000
