--- a/YPVS.ioc
+++ b/YPVS.ioc
@@ -4,7 +4,9 @@ RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
 ProjectManager.MainLocation=Src
 RCC.MCOFreq_Value=72000000
 ProjectManager.ProjectFileName=YPVS.ioc
+NVIC.DMA1_Channel5_IRQn=true\:1\:0\:true\:true\:true\:4\:false\:true
 PD1-OSC_OUT.Mode=HSE-External-Oscillator
+Dma.USART1_RX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
 TIM2.CounterMode=TIM_COUNTERMODE_UP
 ProjectManager.KeepUserCode=true
 PA10.Mode=Asynchronous
@@ -15,12 +17,12 @@ TIM1.IPParameters=Channel-Output Compare1 No Output,Prescaler,Period
 RCC.PLLCLKFreq_Value=72000000
 PC13-TAMPER-RTC.GPIOParameters=GPIO_Label
 TIM1.Channel-Output\ Compare1\ No\ Output=TIM_CHANNEL_1
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_TIM2_Init-TIM2-false-HAL-true,4-MX_TIM3_Init-TIM3-false-HAL-true,5-MX_USART1_UART_Init-USART1-false-HAL-true,6-MX_TIM1_Init-TIM1-false-HAL-true,7-MX_ADC1_Init-ADC1-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_TIM2_Init-TIM2-false-HAL-true,5-MX_TIM3_Init-TIM3-false-HAL-true,6-MX_USART1_UART_Init-USART1-false-HAL-true,7-MX_TIM1_Init-TIM1-false-HAL-true
 PA2.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
 PC13-TAMPER-RTC.Signal=GPIO_Output
 RCC.ADCFreqValue=12000000
 ProjectManager.DefaultFWLocation=true
-NVIC.TIM1_UP_IRQn=true\:1\:1\:true\:false\:true\:true\:true
+NVIC.TIM1_UP_IRQn=true\:1\:1\:true\:true\:true\:3\:true\:true
 PD0-OSC_IN.Signal=RCC_OSC_IN
 TIM2.ICFilter_2=15
 ProjectManager.DeletePrevious=true
@@ -40,22 +42,23 @@ VP_TIM1_VS_no_output1.Mode=Output Compare1 No Output
 PD1-OSC_OUT.Signal=RCC_OSC_OUT
 RCC.ADCPresc=RCC_ADCPCLK2_DIV6
 PA13.Signal=SYS_JTMS-SWDIO
-Mcu.IP4=TIM2
+Mcu.IP4=TIM1
 RCC.FCLKCortexFreq_Value=72000000
-Mcu.IP5=TIM3
+Mcu.IP5=TIM2
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-Mcu.IP2=SYS
-Mcu.IP3=TIM1
-Mcu.IP0=NVIC
+Mcu.IP2=RCC
+Mcu.IP3=SYS
+Mcu.IP0=DMA
 PA9.Mode=Asynchronous
-Mcu.IP1=RCC
+Mcu.IP1=NVIC
 TIM1.Prescaler=71
 Mcu.UserConstants=
 SH.S_TIM3_CH2.ConfNb=1
 ProjectManager.TargetToolchain=Other Toolchains (GPDSC)
 Mcu.ThirdPartyNb=0
+Dma.USART1_RX.0.Direction=DMA_PERIPH_TO_MEMORY
 RCC.HCLKFreq_Value=72000000
-Mcu.IPNb=7
+Mcu.IPNb=8
 TIM2.IPParameters=ICFilter_2,CounterMode,Prescaler,Period
 ProjectManager.PreviousToolchain=
 RCC.APB2TimFreq_Value=72000000
@@ -73,11 +76,13 @@ RCC.USBFreq_Value=72000000
 Mcu.Pin9=PB5
 VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
 RCC.AHBFreq_Value=72000000
+Dma.USART1_RX.0.PeriphInc=DMA_PINC_DISABLE
+Dma.USART1_RX.0.Priority=DMA_PRIORITY_LOW
 Mcu.Pin0=PC13-TAMPER-RTC
 Mcu.Pin1=PD0-OSC_IN
 GPIO.groupedBy=Group By Peripherals
-PD0-OSC_IN.Mode=HSE-External-Oscillator
 Mcu.Pin2=PD1-OSC_OUT
+PD0-OSC_IN.Mode=HSE-External-Oscillator
 Mcu.Pin3=PA0-WKUP
 PA0-WKUP.GPIOParameters=GPIO_PuPd,GPIO_Label
 Mcu.Pin4=PA2
@@ -101,25 +106,29 @@ MxCube.Version=6.0.1
 VP_TIM2_VS_ClockSourceINT.Mode=Internal
 PA14.Mode=Serial_Wire
 TIM3.Prescaler=71
-NVIC.TIM2_IRQn=true\:1\:0\:true\:true\:true\:1\:true\:true
+NVIC.TIM2_IRQn=true\:1\:1\:true\:true\:true\:1\:true\:true
 File.Version=6
 VP_SYS_VS_Systick.Mode=SysTick
 TIM3.IPParameters=Prescaler,Period,Channel-PWM Generation2 CH2
+Dma.USART1_RX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 TIM2.Period=9999
+Dma.USART1_RX.0.MemInc=DMA_MINC_ENABLE
 PA13.Mode=Serial_Wire
 ProjectManager.FreePins=false
 RCC.IPParameters=ADCFreqValue,ADCPresc,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,MCOFreq_Value,PLLCLKFreq_Value,PLLMCOFreq_Value,PLLMUL,PLLSourceVirtual,SYSCLKFreq_VALUE,SYSCLKSource,TimSysFreq_Value,USBFreq_Value,VCOOutput2Freq_Value
 ProjectManager.AskForMigrate=true
 Mcu.Name=STM32F103C(8-B)Tx
+Dma.RequestsNb=1
 ProjectManager.HalAssertFull=false
 VP_TIM1_VS_ClockSourceINT.Mode=Internal
 PA2.Signal=GPIO_Output
 ProjectManager.ProjectName=YPVS
 ProjectManager.UnderRoot=false
-Mcu.IP6=USART1
+Mcu.IP6=TIM3
 RCC.PLLMCOFreq_Value=36000000
+Mcu.IP7=USART1
 ProjectManager.CoupleFile=true
 RCC.SYSCLKFreq_VALUE=72000000
 Mcu.Package=LQFP48
@@ -134,6 +143,7 @@ ProjectManager.CompilerOptimize=6
 ProjectManager.ToolChainLocation=
 PA2.GPIO_Label=SIM_RPM
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+Dma.USART1_RX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
 SH.S_TIM2_CH1_ETR.0=TIM2_CH1,PWM_Input_1
 PA10.Signal=USART1_RX
 PA14.Signal=SYS_JTCK-SWCLK
@@ -151,8 +161,12 @@ Mcu.Pin10=VP_SYS_VS_Systick
 RCC.APB1TimFreq_Value=72000000
 PA0-WKUP.GPIO_PuPd=GPIO_PULLUP
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+Dma.USART1_RX.0.Mode=DMA_NORMAL
 TIM1.Period=4999
+NVIC.USART1_IRQn=true\:1\:0\:true\:true\:true\:2\:true\:true
+Dma.Request0=USART1_RX
 RCC.APB1Freq_Value=36000000
+Dma.USART1_RX.0.Instance=DMA1_Channel5
 ProjectManager.CustomerFirmwarePackage=
 VP_TIM3_VS_ClockSourceINT.Mode=Internal
 ProjectManager.DeviceId=STM32F103C8Tx
